--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Sign in to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build -t sorayoo/task-front-cicd .
+        run: docker build -t sorayoo/eloria-front .
       - name: Push Docker Image
-        run: docker push sorayoo/task-front-cicd:latest
+        run: docker push sorayoo/eloria-front:latest
 
   deploy:
     needs: build
@@ -30,8 +30,8 @@ jobs:
 
     steps:
       - name: Pull image from docker hub
-        run: docker pull sorayoo/task-front-cicd:latest
+        run: docker pull sorayoo/eloria-front:latest
       - name: Delete existing container
         run: docker rm -f reactContainer
       - name: Run container
-        run: docker run -d -p 80:80 --name reactContainer sorayoo/task-front-cicd
+        run: docker run -d -p 80:80 --name reactContainer sorayoo/eloria-front
