--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,13 @@
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+server {
+    listen 80;
+    server_name eloriafront.sr-eloria.com; # 프론트 도메인 주소
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    root /usr/share/nginx/html; # React 정적 파일 경로
+    index index.html index.htm;
 
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-
-    include /etc/nginx/conf.d/*.conf;
-
-    server {
-        listen 80;
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri /index.html;
-        }
-
-        error_page 404 /index.html;
+    location / {
+        try_files $uri $uri/ /index.html; # SPA 라우팅 문제 해결
     }
+
+    error_page 404 /index.html; 
 }
