--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "recoil": "^0.7.7",
     "redux": "^5.0.1",
     "swiper": "^11.1.10",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
